Using local-variable type inference

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
 group 'com.github.zare88.reactivestream.duckduckgo-telegram-bot'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 repositories {
     mavenCentral()
 }
