--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_15
 targetCompatibility = JavaVersion.VERSION_15
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
 repositories {
     mavenCentral()
 }
